--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     },
     "repository": {
       "type": "git",
-      "url": "git+https://github.com/allixina/color-palette-generatorxxxx.git"
+      "url": "https://github.com/allixina/color-palette-generatorxxxx"
     },
     "bugs": {
       "url": "https://github.com/allixina/color-palette-generatorxxxx/issues"
